--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -87,7 +87,11 @@
     <p>We use a third-party to provide monetization technologies for our site. You can review their
         privacy and cookie policy <a href="https://www.snigel.com/privacy-policy/">here</a>.</p>
     <p>You can change your privacy settings by clicking the following button:
-      <button onclick="() => adconsent('showGUI')" className='underline'>Manage Consent</button>
+      <button
+        onclick="() => adconsent('showGUI')"
+        style="text-decoration: underline;">
+          Manage Consent
+      </button>
     </p>
     <p><strong>California Consumer Privacy Act (CCPA)</strong><br/>
         Manage your consent by way of the CCPA</p>
