--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -23,7 +23,7 @@
 
   </style>
     <style>
-        #privacy-policy {
+        /* #privacy-policy {
             display: flex;
             text-align: center;
             overflow: auto;
@@ -32,7 +32,7 @@
             justify-content: flex-start;
             flex-direction: column;
             align-items: center;
-        }
+        } */
         @media (prefers-color-scheme: dark) {
             #privacy-policy { background-color: #121212;color:#fff; }
         }
